# finalProject_FIAP

./: .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
.venv_old/: pyvenv.cfg
.venv_old/Scripts/: activate  activate.bat
api/: main.py
dashboard/: api_metrics.py  app.py
data/golden_set/: README.md  golden_set.json
data/models/: lstm_TSLA.keras
data/processed/: TSLA_processed.csv
data/raw/: TSLA_raw.csv
docs/arquitetura/: ADR-001-lstm-stock-prediction.md  ADR-002-qwen-quantization.md  ADR-003-react-agent.md  ADR-004-evaluation-strategy.md
docs/seguranca/: LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md
src/: inferencia.py  train.py
src/agente/: agent_tools.py  agente_ia.py  rag.py
src/api/: main.py  schemas.py
src/llm_security/: guardrails.py
src/ml_utils/: data_loader.py  preprocessing.py  train.py
src/monitoring/: drift_detection.py  metrics_api.py
src/utils/: prediction_saver.py
tests/: requirements-tests.txt  test_model.py
